tests/snapshots/snapshots__quad-Fragment.glsl.snap
---
source: tests/snapshots.rs
expression: string
---
#version 310 es

precision highp float;



in vec2 v_uv1;
uniform sampler2D u_texture;
out vec4 o_color;

void main() {

	o_color = texture(u_texture, vec2(v_uv1));
	return;
}

