tests/snapshots/snapshots__simple.msl.snap
---
source: tests/snapshots.rs
expression: msl
---
#include <metal_stdlib>
#include <simd/simd.h>

typedef metal::float4 type;

struct main1Input {
};
struct main1Output {
	type o_position [[position]];
};
vertex main1Output main1(
	main1Input input [[stage_in]]
) {
	main1Output output;
	output.o_position = metal::float4(1);
	return output;
}

