tests/snapshots/snapshots__simple.spvasm.snap
---
source: tests/snapshots.rs
expression: dis
---
; SPIR-V
; Version: 1.0
; Generator: rspirv
; Bound: 13
OpCapability Shader
%1 = OpExtInstImport "GLSL.std.450"
OpMemoryModel Logical GLSL450
OpEntryPoint Vertex %3 "main" %6
OpDecorate %6 BuiltIn Position
%2 = OpTypeVoid
%4 = OpTypeFunction %2
%8 = OpTypeFloat 32
%7 = OpTypeVector %8 4
%9 = OpTypePointer Output %7
%6 = OpVariable  %9  Output
%11 = OpTypeInt 32 1
%10 = OpConstant  %11  1
%3 = OpFunction  %2  None %4
%5 = OpLabel
%12 = OpCompositeConstruct  %7  %10
OpStore %6 %12
OpReturn
OpFunctionEnd
