tests/snapshots/snapshots__skybox.spvasm.snap
---
source: tests/snapshots.rs
expression: dis
---
; SPIR-V
; Version: 1.0
; Generator: rspirv
; Bound: 185
OpCapability Shader
%1 = OpExtInstImport "GLSL.std.450"
OpMemoryModel Logical GLSL450
OpEntryPoint Vertex %11 "vs_main" %157 %44 %15
OpEntryPoint Fragment %168 "fs_main" %180 %170
OpExecutionMode %168 OriginUpperLeft
OpDecorate %15 BuiltIn VertexIndex
OpDecorate %26 Block
OpMemberDecorate %26 0 Offset 0
OpMemberDecorate %26 0 ColMajor
OpMemberDecorate %26 0 MatrixStride 16
OpMemberDecorate %26 1 Offset 64
OpMemberDecorate %26 1 ColMajor
OpMemberDecorate %26 1 MatrixStride 16
OpDecorate %25 DescriptorSet 0
OpDecorate %25 Binding 0
OpDecorate %44 Location 0
OpDecorate %157 BuiltIn Position
OpDecorate %170 Location 0
OpDecorate %171 DescriptorSet 0
OpDecorate %171 Binding 1
OpDecorate %176 DescriptorSet 0
OpDecorate %176 Binding 2
OpDecorate %180 Location 0
%3 = OpTypeInt 32 1
%4 = OpTypePointer Function %3
%8 = OpTypeFloat 32
%7 = OpTypeVector %8 4
%9 = OpTypePointer Function %7
%10 = OpTypeVoid
%12 = OpTypeFunction %10
%16 = OpTypeInt 32 0
%17 = OpTypePointer Input %16
%15 = OpVariable  %17  Input
%19 = OpConstant  %3  2
%22 = OpConstant  %3  1
%27 = OpTypeMatrix %7 4
%26 = OpTypeStruct %27 %27
%28 = OpTypePointer Uniform %26
%25 = OpVariable  %28  Uniform
%29 = OpConstant  %3  0
%30 = OpTypePointer Uniform %27
%36 = OpConstant  %8  4.0
%37 = OpConstant  %8  1.0
%42 = OpConstant  %8  0.0
%45 = OpTypeVector %8 3
%46 = OpTypePointer Output %45
%44 = OpVariable  %46  Output
%48 = OpTypeMatrix %45 3
%52 = OpConstant  %3  1
%53 = OpTypePointer Uniform %27
%54 = OpConstant  %3  0
%55 = OpTypePointer Uniform %7
%56 = OpConstant  %3  0
%57 = OpTypePointer Uniform %8
%62 = OpConstant  %3  1
%63 = OpTypePointer Uniform %27
%64 = OpConstant  %3  0
%65 = OpTypePointer Uniform %7
%66 = OpConstant  %3  1
%67 = OpTypePointer Uniform %8
%72 = OpConstant  %3  1
%73 = OpTypePointer Uniform %27
%74 = OpConstant  %3  0
%75 = OpTypePointer Uniform %7
%76 = OpConstant  %3  2
%77 = OpTypePointer Uniform %8
%83 = OpConstant  %3  1
%84 = OpTypePointer Uniform %27
%85 = OpConstant  %3  1
%86 = OpTypePointer Uniform %7
%87 = OpConstant  %3  0
%88 = OpTypePointer Uniform %8
%93 = OpConstant  %3  1
%94 = OpTypePointer Uniform %27
%95 = OpConstant  %3  1
%96 = OpTypePointer Uniform %7
%97 = OpConstant  %3  1
%98 = OpTypePointer Uniform %8
%103 = OpConstant  %3  1
%104 = OpTypePointer Uniform %27
%105 = OpConstant  %3  1
%106 = OpTypePointer Uniform %7
%107 = OpConstant  %3  2
%108 = OpTypePointer Uniform %8
%114 = OpConstant  %3  1
%115 = OpTypePointer Uniform %27
%116 = OpConstant  %3  2
%117 = OpTypePointer Uniform %7
%118 = OpConstant  %3  0
%119 = OpTypePointer Uniform %8
%124 = OpConstant  %3  1
%125 = OpTypePointer Uniform %27
%126 = OpConstant  %3  2
%127 = OpTypePointer Uniform %7
%128 = OpConstant  %3  1
%129 = OpTypePointer Uniform %8
%134 = OpConstant  %3  1
%135 = OpTypePointer Uniform %27
%136 = OpConstant  %3  2
%137 = OpTypePointer Uniform %7
%138 = OpConstant  %3  2
%139 = OpTypePointer Uniform %8
%145 = OpConstant  %3  0
%146 = OpTypePointer Function %8
%149 = OpConstant  %3  1
%150 = OpTypePointer Function %8
%153 = OpConstant  %3  2
%154 = OpTypePointer Function %8
%158 = OpTypePointer Output %7
%157 = OpVariable  %158  Output
%170 = OpVariable  %158  Output
%172 = OpTypeImage %8 Cube 0 0 0 1 Unknown
%173 = OpTypePointer UniformConstant %172
%171 = OpVariable  %173  UniformConstant
%175 = OpTypeSampledImage %172
%177 = OpTypeSampler
%178 = OpTypePointer UniformConstant %177
%176 = OpVariable  %178  UniformConstant
%181 = OpTypePointer Input %45
%180 = OpVariable  %181  Input
%11 = OpFunction  %10  None %12
%13 = OpLabel
%2 = OpVariable  %4  Function
%5 = OpVariable  %4  Function
%6 = OpVariable  %9  Function
%18 = OpLoad  %16  %15
%14 = OpSDiv  %3  %18 %19
OpStore %2 %14
%21 = OpLoad  %16  %15
%20 = OpBitwiseAnd  %3  %21 %22
OpStore %5 %20
%24 = OpAccessChain  %30  %25 %29
%31 = OpLoad  %27  %24
%34 = OpLoad  %3  %2
%35 = OpConvertSToF  %8  %34
%33 = OpFMul  %8  %35 %36
%32 = OpFSub  %8  %33 %37
%40 = OpLoad  %3  %5
%41 = OpConvertSToF  %8  %40
%39 = OpFMul  %8  %41 %36
%38 = OpFSub  %8  %39 %37
%43 = OpCompositeConstruct  %7  %32 %38 %42 %37
%23 = OpMatrixTimesVector  %7  %31 %43
OpStore %6 %23
%51 = OpAccessChain  %53  %25 %52
%50 = OpAccessChain  %55  %51 %54
%49 = OpAccessChain  %57  %50 %56
%58 = OpLoad  %8  %49
%61 = OpAccessChain  %63  %25 %62
%60 = OpAccessChain  %65  %61 %64
%59 = OpAccessChain  %67  %60 %66
%68 = OpLoad  %8  %59
%71 = OpAccessChain  %73  %25 %72
%70 = OpAccessChain  %75  %71 %74
%69 = OpAccessChain  %77  %70 %76
%78 = OpLoad  %8  %69
%79 = OpCompositeConstruct  %45  %58 %68 %78
%82 = OpAccessChain  %84  %25 %83
%81 = OpAccessChain  %86  %82 %85
%80 = OpAccessChain  %88  %81 %87
%89 = OpLoad  %8  %80
%92 = OpAccessChain  %94  %25 %93
%91 = OpAccessChain  %96  %92 %95
%90 = OpAccessChain  %98  %91 %97
%99 = OpLoad  %8  %90
%102 = OpAccessChain  %104  %25 %103
%101 = OpAccessChain  %106  %102 %105
%100 = OpAccessChain  %108  %101 %107
%109 = OpLoad  %8  %100
%110 = OpCompositeConstruct  %45  %89 %99 %109
%113 = OpAccessChain  %115  %25 %114
%112 = OpAccessChain  %117  %113 %116
%111 = OpAccessChain  %119  %112 %118
%120 = OpLoad  %8  %111
%123 = OpAccessChain  %125  %25 %124
%122 = OpAccessChain  %127  %123 %126
%121 = OpAccessChain  %129  %122 %128
%130 = OpLoad  %8  %121
%133 = OpAccessChain  %135  %25 %134
%132 = OpAccessChain  %137  %133 %136
%131 = OpAccessChain  %139  %132 %138
%140 = OpLoad  %8  %131
%141 = OpCompositeConstruct  %45  %120 %130 %140
%142 = OpCompositeConstruct  %48  %79 %110 %141
%143 = OpTranspose  %48  %142
%144 = OpAccessChain  %146  %6 %145
%147 = OpLoad  %8  %144
%148 = OpAccessChain  %150  %6 %149
%151 = OpLoad  %8  %148
%152 = OpAccessChain  %154  %6 %153
%155 = OpLoad  %8  %152
%156 = OpCompositeConstruct  %45  %147 %151 %155
%47 = OpMatrixTimesVector  %45  %143 %156
OpStore %44 %47
%161 = OpLoad  %3  %2
%162 = OpConvertSToF  %8  %161
%160 = OpFMul  %8  %162 %36
%159 = OpFSub  %8  %160 %37
%165 = OpLoad  %3  %5
%166 = OpConvertSToF  %8  %165
%164 = OpFMul  %8  %166 %36
%163 = OpFSub  %8  %164 %37
%167 = OpCompositeConstruct  %7  %159 %163 %42 %37
OpStore %157 %167
OpReturn
OpFunctionEnd
%168 = OpFunction  %10  None %12
%169 = OpLabel
%174 = OpLoad  %172  %171
%179 = OpLoad  %177  %176
%182 = OpLoad  %45  %180
%183 = OpSampledImage  %175  %174 %179
%184 = OpImageSampleImplicitLod  %7  %183 %182
OpStore %170 %184
OpReturn
OpFunctionEnd
